# asimov_academy

./: .gitignore  README.md  UV_SETUP_GUIDE.md  activate_uv_env.ps1  lightweight_code_models.md  local_agent_local_llm.py  local_agent_web_scraper.py  pyproject.toml
begin/: helloworld.py
code-examples/: DiscountRule.cs  DiscountRule.java  business_rule.md  discountRule.js  discount_rule.py
examples/: 0.llm_call_hello_world.py  1.1resercher.py  1.3.ow_tools.py  agentos.py  exemplo1.py
local-model-eval/: 01_ollama_eval_results.md  eval_ollama_models.py  eval_ollama_tiny_only.py  list_ollama_models_api.py  ollama_eval_results.md  ollama_eval_results_0.md  ollama_eval_results_tiny.md
retirement_glossary_scraper/: AGENT.md  ARCHITECTURE.md  MODULES.md  README.md  SEMANTIC_SEARCH_SOLUTION.md  main_agent.py  query_agent.py  query_retirement_glossary.py  test_query_agent.py
retirement_glossary_scraper/bk/: TRANSFORMATION_SUMMARY.md  local_agent_web_scraper.py  main.py
retirement_glossary_scraper/src/: __init__.py  agent_core.py  agent_memory.py  agent_tools.py  config.py  indexer.py  processor.py  query_agent_core.py  query_agent_tools.py  scraper.py  utils.py
retirement_glossary_scraper/tmp/: agent_memory.json
tmp/: agents.db  pdfreaderagent.db
